--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <h1>Helo world!</h1>
+    <h1>Hello world!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eveniet similique veritatis laborum. Quo error provident incidunt necessitatibus, ducimus culpa ipsam quod non porro est nesciunt quis voluptate, fugit quidem.</p>
 </body>
 </html>
